--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -6,6 +6,7 @@ body {
   font-family: 'Montserrat', sans-serif !important;
   color: var(--blue-400) !important;
   background: var(--grey-100) !important;
+  font-size: 16px;
 }
 body {
   overflow-x: hidden;
